--- a/css/global.css
+++ b/css/global.css
@@ -162,11 +162,42 @@ body{
 }
 
 .page-content-ads-item{
-    width: 80px;
-    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     flex: 1;
-    background-color: aqua;
+    position: relative;
+    background-color: white;
+    background-image: url("https://placehold.co/600x400");
+    height: 420px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+.page-content-ads-item p{
+    margin: 0;
+}
+
+.page-content-ads-item .product-name{
+    margin-top: 70px;
+    font-size: 40px;
+}
+
+ .page-content-ads-item .product-category{
+    font-size: 40px;
+    font-weight: bold; 
+}
+
+.page-content-ads-item .product-price{
+    margin-top: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    color: red;
+}
+    
+
 
 .page-content-services {
     width: 100%;
@@ -189,10 +220,33 @@ body{
 }
 
 .shop-actions-item{
-    width: 80px;
-    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     flex: 1;
-    background-color: aqua;
+    position: relative;
+    background-color: white;
+    background-image: url("https://placehold.co/400x400");
+    height: 155px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.shop-actions-item h1, h2{
+    margin: 0;
+}
+
+h2{
+    margin-top: 30px;
+    margin-left: 30px;
+    font-size: 15px;
+}
+
+h1{
+    margin-left: 40px;
+    font-size: 20px;
 }
 
 .shop-actions-categories{
