--- a/css/global.css
+++ b/css/global.css
@@ -74,6 +74,7 @@ button {
 
 .page-content-header{
     width: 100%;
+    height: 50px;
     background-color: rgb(0, 128, 122);
     display: flex;
     justify-content: space-between;
@@ -85,6 +86,8 @@ button {
     display: flex;
     align-items: center;
     background-color: blueviolet;
+    margin-left: 220px;
+    margin-top: 8px;
 }
     
 .page-content-header-actions{
@@ -93,13 +96,20 @@ button {
     align-items: center;
     position: relative;
     gap: 35px;
-    background-color: aquamarine;
+    background-color: white;
 }
 
-.page-content-header-search-box{
-    width: 268px;
-    margin-left: 81px;
-    height: 25px;
+.page-content-header-search-box{  
+    width: 312px;
+    height: 45px;
+    padding-left: 13px;
+    border-color: gold;
+    border-radius: 40px;
+    font-size: 13px;
+}
+
+.page-content-header-search-box:focus{
+    outline: none;
 }
 
 .search-box{
