--- a/css/global.css
+++ b/css/global.css
@@ -25,48 +25,47 @@ button {
 
 .header {       
     width: 100%;
-    background-color: yellow; 
+    height: 48px;
     display: flex;
     justify-content: center;
+    background-color: #f3feff;;
+
 }
 
-.header-container {    
-    width: 100%;    
+.header-container {
+    width: 100%;
+    padding: 0 16px;
     max-width: 1000px;
-    background-color: orange; 
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .shopping-info {
+    font-size: 11px;
     text-transform: uppercase;
-    background: purple;
 }
 
   
 .navigation-bar {
-    background-color: greenyellow;
     display: flex;
     gap: 10px;
 }
   
 .navigation-item{
-    background: brown;
-    height: 30px;
-    width: 100px;
+    padding-left: 24px;
+    font-size: 12px;
 }
 
 .content {
     display: flex;
     justify-content: center;
-    background-color: red;     
 }
 
 .content-container{
     width: 100%;
+    padding: 0 16px;
     max-width: 1000px;
-    background-color: rgb(53, 52, 41);
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -75,50 +74,48 @@ button {
 .page-content-header{
     width: 100%;
     height: 50px;
-    background-color: rgb(0, 128, 122);
     display: flex;
     justify-content: space-between;
+    margin-top: 24px;
 }
 
 .page-content-header-contact{
-    height: 30px;
-    width: 181px;
+    flex: 1;
+    padding-right: 40px;
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-    background-color: blueviolet;
-    margin-left: 220px;
-    margin-top: 8px;
+    font-size: 14px;
+}
+
+.fa-phone{
+    margin-right: 13px;
+    color: #FAD234;
 }
     
 .page-content-header-actions{
-    padding-right: 25px;
     display: flex;
     align-items: center;
     position: relative;
-    gap: 35px;
     background-color: white;
 }
 
-.page-content-header-search-box{  
+.search-box{
+    overflow: hidden;
+    border: 1px solid gold;
+    border-radius: 40px;
+}
+
+.search-box input{
+    border: none;
     width: 312px;
     height: 45px;
     padding-left: 13px;
-    border-color: gold;
-    border-radius: 40px;
     font-size: 13px;
 }
 
-.page-content-header-search-box:focus{
+.search-box input:focus{
     outline: none;
-}
-
-.search-box{
-    left:40px;
-}
-
-.page-content-header-action-item-search{
-    margin-left: -70px;
-    left: 40px;
 }
 
 .page-content-header-actions button{
@@ -135,8 +132,19 @@ button {
     background-color: transparent;
 }
 
+.page-content-header-action-item button i{
+    font-size: 20px;
+}
+
 .page-content-header-action-item{
     position: relative;
+    padding-left: 24px;
+}
+
+
+
+.shopping-cart-total-price{
+    margin: 8px 0 0;
 }
 
 .page-content-header-action-item span{
@@ -155,35 +163,40 @@ button {
 }
 
 .page-content-navigation{
-    gap: 40px;
+    gap: 24px;
     width: 100%;
-    background-color: rgb(15, 128, 0);
     display: flex;
 }
 
 .page-content-navigation-department{
-    height: 30px;
-    width: 170px;
-    background-color: rgba(255, 240, 37, 0.664);
+    height: 50px;
+    width: 220px;
+    background-color: #FAD234;
+    border-top-right-radius: 13px;
+    border-top-left-radius: 13px;
+}
+
+.page-content-department{
+    display: flex;
+    margin-left: 5px;
+    margin-top: 18px;
+    justify-content: space-evenly;
 }
 
 .page-content-navigation-bar{
     display: flex;
+    align-items: center;
     gap: 10px;
-    background-color: rgba(45, 16, 206, 0.664);
 }
 
 .page-content-navigation-bar-items{
-    height: 30px;
-    width: 80px;
-    background-color: aliceblue;
+    padding-right: 16px;
 }
 
 .page-content-ads{
     gap: 20px;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(109, 128, 0);
 }
 
 .page-content-ads-item{
@@ -226,22 +239,42 @@ button {
 
 .page-content-services {
     width: 100%;
+    height: 96px;
     display: flex;
-    gap: 15px;
-    background-color: blueviolet;
+    gap: 16px;
+    align-items: center;
+    border: 1px solid #EBEBEB;
 }
 
+
 .page-content-services-item {
-    height: 50px;
+    display: flex;
+    padding-left: 16px;
     flex: 1;
-    background-color: rgba(5, 128, 107, 0.938);
+}
+
+.page-content-services-item i{
+    margin-top: 24px;
+    margin-right: 20px;
+    color: #FAD234;
+}
+
+.page-content-services-description{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5px;
+    font-size: 14px;
+    gap: 16px;
+}
+
+.page-content-services-description span:last-of-type{
+    font-size: 12px;
 }
 
 .shop-actions{
     gap: 20px;
     display: flex;
     justify-content: space-around;
-    background-color: rgb(109, 128, 0);
 }
 
 .shop-actions-item{
@@ -314,15 +347,16 @@ h1{
 
 .footer {
     width: 100%;
-    background-color: green;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer-container {
     width: 100%;
     max-width: 1000px;
-    background-color: orange;
+    padding: 0 16px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -330,17 +364,26 @@ h1{
 
 .subscribe-section {
     width: 100%;
+    height: 92px;
     display: flex;
-    background-color: rgb(143, 212, 13);
-    justify-content: space-between;
     align-items: center;
+    background-color: #FAD234;
+    justify-content: center;
+}
+
+.subscribe-section-container{
+    width: 100%;
+    padding: 0 16px;
+    max-width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .subscribe-section-title{
-    width: 250px;
-    height: 50px;
-    background: pink;
     display: flex;
+    align-items: center;
+    gap: 16px;
 }
 
 .subscribe-container {
@@ -402,7 +445,8 @@ h1{
     width: 200px;
     height: 300px;
     position:absolute;
-    top: 35px;
+    top: 48px;
     right: 0;
     background-color: black;
+    z-index: 1;
 }
