--- a/css/global.css
+++ b/css/global.css
@@ -66,12 +66,11 @@ button {
 }
 
 .content-container{
-    width: 100%;
-    padding: 24px  16px;
+    padding: 0px  16px;
     max-width: 1174px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 56px;
 }
 
 .page-content-info{
@@ -98,12 +97,18 @@ button {
 }
 
 .page-content-header-contact{
+    line-height: 24px;
     flex: 1;
     padding-right: 116px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
     font-size: 14px;
+    color: #7D7D7D;
+}
+
+.page-content-header-contact i {
+    font-size: 40px;
 }
 
 .fa-phone{
@@ -167,8 +172,6 @@ button {
 
 .shopping-cart-widget{
     display: none;
-    width: 360px;
-    height: 528px;
     border-top: 2px solid #FAD100;
     position:absolute;
     top: 49px;
@@ -177,24 +180,45 @@ button {
     z-index: 1;
 }
 
-.shopping-cart-container{
-    width: 100%;
-    height: 500px;
+
+
+.shopping-cart-checkout-button{
+    width: 100% !important;
+    height: 48px;
+    font-size: 14px;
+    color: white !important;
+    border-radius: 4px;
+    background-color: #666666 !important;
 }
-.shopping-cart-bought{
+
+.shopping-cart-container{
+    width: 328px;
+    height: 468px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.shopping-cart-items{
+    display: flex;
+    flex-direction: column;
+}
+
+.shopping-cart-item{
     width: 100%;
     height: 150px;
     border-bottom: 1px solid #EBEBEB ;
     display: flex;
 }
 
-.shopping-cart-bought img{
+.shopping-cart-item img{
+    width: 110px;
+    margin-top: 10px;
+    height: 110px;
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 150px;
-    flex: 1;
-    
 }
 
 .shopping-card-bought-details{
@@ -206,20 +230,26 @@ button {
     flex: 1;
 }
 
-.shopping-cart-calculation{
+.shopping-cart-total{
     width: 100%;
-    height: 30px;
+    height: 120px;
+    display: flex;
+    align-items: center;
+
 }
-.shopping-cart-calculation-actions{
+.shopping-cart-total-actions{
     width: 100%;
-    height: 30px;
+    height: 80px;
     display: flex;
     flex-direction: column;
-    
+
 }
-.shopping-cart-calculation-prices{
+.shopping-cart-total-prices{
     width: 100%;
-    height: 30px;
+    height: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .page-content-header-action-item span{
@@ -267,7 +297,13 @@ button {
 }
 
 .page-content-navigation-bar-items{
-    padding-right: 16px;
+    margin-right:  16px;
+    padding-bottom: 8px;
+}
+
+.page-content-navigation-bar-items.selected{
+    color: #FAD234;
+    border-bottom: 2px solid #FAD234;
 }
 
 .page-content-ads{
@@ -370,11 +406,16 @@ button {
 }
 
 .shop-actions-container{
-    width: 220px;
+    width: 100%;
     margin-right: 8px;
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+
+.shop-actions-product-container>*{
+    width: calc(100% - 32px);
+    margin: 0 16px;
 }
 
 .shop-actions-container button{
@@ -397,29 +438,92 @@ h1{
 .shop-actions-categories{
     width: 100%;
     display: flex;
-    gap: 30px;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(102, 20, 255);
 }
 
 .shop-actions-categories-title{
-    width: 150px;
-    height: 50px;
-    background-color: lawngreen;
+    font-size: 24px;
+    font-weight: normal;
+    margin: 0;
+}
+
+.shop-actions-categories-title-separator{
+    width: 56px;
+    height: 6px;
+    margin-top: 8px;
+    border-radius: 5px;
+    background-color: #FAD234;
 }
 
 .shop-actions-categories-container{
-    width: 100%;
+    margin-top: 30px;
     display: flex;
     gap: 30px;
-    background-color: gray;
 }
 
 .shop-actions-product{
     flex: 1;
-    height: 50px;
-    background-color: darkgreen;
+    height: 560px;
+    border: 1px solid #EBEBEB;
+    background-color: white;
+}
+
+.shop-actions-product-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.shop-actions-product-image-container{
+    display: flex;
+    align-items: center;
+    height: 55%;
+}
+
+.shop-actions-product-image-container img{
+    max-width: 100%;
+}
+
+.price-discount{
+    display: flex;
+    flex-direction: row;
+}
+
+.price-discount span:last-of-type{
+    text-decoration: line-through;
+}
+
+.product-rating{
+    color: #FAD234;
+}
+
+.product-inventory-bar{
+    width: 250px;
+    height: 16px;
+    margin-top: 8px;
+    border-radius: 5px;
+    background-color: grey;
+}
+
+.product-inventory-bar-able{
+    width: 200px;
+    height: 16px;
+    margin-top: 8px;
+    border-radius: 5px;
+    background-color: #FAD234;
+}
+
+.discount-left-time{
+    display: flex;
+    justify-content: space-around;
+    border: 2px solid yellow;
+    border-radius: 40px;
+}
+
+.discount-left-time-specific{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .footer {
@@ -486,7 +590,8 @@ h1{
 
 .footer-navigation {
     width: 100%;
-    background-color:green;
+    height: 280px;
+    background-color:white;
     display: flex;
     flex-direction: row;
     gap: 30px;
@@ -496,6 +601,23 @@ h1{
     width: 100%;
     height: 50px;
     background-color:blue;
+}
+
+.footer-navigation-information{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #404040;
+}
+
+
+.footer-navigation-address {
+    display: flex;
+    align-items: center;
+}
+
+.footer-navigation-address .fa-phone{
+    color: #404040;
 }
 
 .footer-info {
