--- a/css/global.css
+++ b/css/global.css
@@ -472,21 +472,38 @@ h1{
 .shop-actions-product-container{
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+    height: 38%;
+
 }
 
 .shop-actions-product-image-container{
     display: flex;
     align-items: center;
-    height: 55%;
+    height: 57%;
 }
 
 .shop-actions-product-image-container img{
     max-width: 100%;
 }
 
+.shop-actions-product-decorations{
+    flex: 1;
+    height: 370px;
+    border: 1px solid #EBEBEB;
+    background-color: white;
+}
+
 .price-discount{
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+
+.price-discount span:first-child{
+    font-size: 22px;
+    font-weight: bold;
+    color: #CD131C;
 }
 
 .price-discount span:last-of-type{
@@ -515,8 +532,10 @@ h1{
 
 .discount-left-time{
     display: flex;
+    align-items: center;
+    height: 60px;
     justify-content: space-around;
-    border: 2px solid yellow;
+    border: 2px solid #FAD100;
     border-radius: 40px;
 }
 
@@ -530,6 +549,7 @@ h1{
     width: 100%;
     display: flex;
     justify-content: center;
+    gap: 40px;
     flex-direction: column;
     align-items: center;
 }
@@ -591,7 +611,9 @@ h1{
 .footer-navigation {
     width: 100%;
     height: 280px;
+    padding-bottom: 40px;
     background-color:white;
+    border-bottom: solid 2px #F3F3F3;
     display: flex;
     flex-direction: row;
     gap: 30px;
@@ -604,8 +626,10 @@ h1{
 }
 
 .footer-navigation-information{
+    width: 248px;
     display: flex;
     flex-direction: column;
+    font-size: 14px;
     justify-content: space-between;
     color: #404040;
 }
@@ -622,20 +646,29 @@ h1{
 
 .footer-info {
     width: 100%;
-    background-color:rgb(11, 184, 63);
+    font-size: 14px;
+    margin-top: 40px;
+    height: 90px;
     display: flex;
     justify-content: space-between;
 }
 
 .social-media{
-    width: 250px;
-    height: 50px;
-    background-color:darkorchid;    
+    width: 260px;
+    height: 100%;
+}
+
+.social-media-brands{
+    display: flex;
 }
 
 .payments-info{
     width: 250px;
     height: 50px;
-    background-color: grey;
+}
+
+.payments-info-cards{
+    display: flex;
+    flex-direction: row;
 }
 
