Some new decorations. Multiple changes.

--- a/css/global.css
+++ b/css/global.css
@@ -109,12 +109,10 @@ button {
 
 .page-content-header-contact i {
     font-size: 40px;
-}
-
-.fa-phone{
     margin-right: 13px;
     color: #FAD234;
 }
+
     
 .page-content-header-actions{
     display: flex;
@@ -222,12 +220,18 @@ button {
 }
 
 .shopping-card-bought-details{
+    margin-top: 10px;
     width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     padding-left: 8px;
     flex: 1;
+    gap: 8px;
+}
+
+.shopping-card-bought-details .product-price{
+    font-size: 21px;
 }
 
 .shopping-cart-total{
@@ -282,6 +286,7 @@ button {
 }
 
 .page-content-department{
+    gap: 8px;
     font-size: 15px;
     font-weight: bold;
     display: flex;
@@ -327,6 +332,21 @@ button {
     background-size: cover;
 }
 
+.page-content-ads-products{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    flex: 1;
+    position: relative;
+    background-color: white;
+    background-image: url("https://placehold.co/600x400");
+    height: 206px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .page-content-ads-item p{
     margin: 0;
 }
@@ -341,8 +361,7 @@ button {
     font-weight: bold; 
 }
 
-.page-content-ads-item .product-price{
-    margin-top: 20px;
+.product-price{
     font-size: 30px;
     font-weight: bold;
     color: #CD131C;
@@ -384,6 +403,62 @@ button {
     font-size: 12px;
 }
 
+.categories-content{
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+}
+
+.categories-column{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.categories-column-container{
+    width: 100%;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.categories-column-decorations{
+    flex: 1;
+    height: 370px;
+    border: 1px solid #EBEBEB;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+.categories-column-decorations img{
+    height: 100%;
+}
+
+.categories-column-decorations .shop-actions-product-info{
+    font-size: 13px;
+}
+
+.categories-column-features{
+    width: 100%;
+    height: 80px;
+}
+
+.categories-column-features-product{
+
+}
+
+.categories-column-arrivals{
+    width: 100%;
+    height: 80px;
+}
+.categories-column-best{
+    width: 100%;
+    height: 80px;
+}
+
 .shop-actions{
     gap: 30px;
     display: flex;
@@ -406,16 +481,15 @@ button {
 }
 
 .shop-actions-container{
-    width: 100%;
+    max-width: 45%;
     margin-right: 8px;
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.shop-actions-product-container>*{
-    width: calc(100% - 32px);
-    margin: 0 16px;
+.shop-actions-container h2:first-child{
+    color: #CD131C;
 }
 
 .shop-actions-container button{
@@ -457,6 +531,7 @@ h1{
 }
 
 .shop-actions-categories-container{
+    width: 100%;
     margin-top: 30px;
     display: flex;
     gap: 30px;
@@ -469,13 +544,20 @@ h1{
     background-color: white;
 }
 
-.shop-actions-product-container{
+.shop-actions-product-info{
+    width: 100%;
+    padding: 0 16px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: 38%;
-
 }
+
+.shop-actions-product-info>.product-name{
+    margin: 0;
+}
+
 
 .shop-actions-product-image-container{
     display: flex;
@@ -501,6 +583,7 @@ h1{
 }
 
 .price-discount span:first-child{
+    margin-right: 4px;
     font-size: 22px;
     font-weight: bold;
     color: #CD131C;
@@ -514,16 +597,24 @@ h1{
     color: #FAD234;
 }
 
+.product-inventory-counts{
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-inventory-counts span{
+    font-size: 14px;
+}
+
 .product-inventory-bar{
-    width: 250px;
     height: 16px;
     margin-top: 8px;
     border-radius: 5px;
-    background-color: grey;
+    background-color: #EBEBEB;
 }
 
 .product-inventory-bar-able{
-    width: 200px;
+    width: 75%;
     height: 16px;
     margin-top: 8px;
     border-radius: 5px;
@@ -533,6 +624,7 @@ h1{
 .discount-left-time{
     display: flex;
     align-items: center;
+    margin-top: 16px;
     height: 60px;
     justify-content: space-around;
     border: 2px solid #FAD100;
@@ -545,6 +637,10 @@ h1{
     align-items: center;
 }
 
+.discount-left-time-specific span:first-of-type{
+    font-weight: bold;
+}
+
 .footer {
     width: 100%;
     display: flex;
@@ -554,7 +650,13 @@ h1{
     align-items: center;
 }
 
-.footer-container {
+.footer-section{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-section-container {
     width: 100%;
     max-width: 1174px;
     padding: 0 16px;
@@ -619,28 +721,37 @@ h1{
     gap: 30px;
 }
 
+.footer-navigation-group.contact{
+    flex: 1.5;
+}
+
 .footer-navigation-item {
     width: 100%;
     height: 50px;
     background-color:blue;
 }
 
-.footer-navigation-information{
-    width: 248px;
+.footer-navigation-group{
     display: flex;
+    flex: 1;
     flex-direction: column;
     font-size: 14px;
     justify-content: space-between;
     color: #404040;
 }
 
-
-.footer-navigation-address {
-    display: flex;
-    align-items: center;
+.footer-navigation-group.tweeter-feed{
+    justify-content: flex-start;
+    flex: 2;
 }
 
-.footer-navigation-address .fa-phone{
+
+.footer-navigation-navigation-contact {
+    display: flex;
+    gap: 16px;
+}
+
+.footer-navigation-navigation-contact .fa-phone{
     color: #404040;
 }
 
@@ -654,21 +765,26 @@ h1{
 }
 
 .social-media{
-    width: 260px;
     height: 100%;
 }
 
 .social-media-brands{
     display: flex;
+    gap: 20px;
 }
 
 .payments-info{
-    width: 250px;
     height: 50px;
 }
 
 .payments-info-cards{
     display: flex;
     flex-direction: row;
+    gap: 8px;
+}
+
+.payments-info-cards img{
+
+    width: 40px;
 }
 
