--- a/css/global.css
+++ b/css/global.css
@@ -54,8 +54,14 @@ button {
 }
   
 .navigation-item{
+    text-decoration: none;
+    color: #525252;
     padding-left: 24px;
     font-size: 12px;
+}
+
+.navigation-item:hover{
+    color: #161616;
 }
 
 .content {
@@ -68,6 +74,7 @@ button {
 .content-container{
     padding: 0px  16px;
     max-width: 1174px;
+    margin-bottom: 56px;
     display: flex;
     flex-direction: column;
     gap: 56px;
@@ -151,6 +158,7 @@ button {
     color: black;
     border: none;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .page-content-header-action-item button i{
@@ -190,8 +198,7 @@ button {
 }
 
 .shopping-cart-container{
-    width: 328px;
-    height: 468px;
+
     padding: 16px;
     display: flex;
     flex-direction: column;
@@ -201,30 +208,36 @@ button {
 .shopping-cart-items{
     display: flex;
     flex-direction: column;
+    width: 328px;
 }
 
 .shopping-cart-item{
     width: 100%;
-    height: 150px;
+    padding-bottom: 16px;
+    margin-top: 16px;
     border-bottom: 1px solid #EBEBEB ;
     display: flex;
 }
 
+.shopping-cart-item button{
+    display: flex;
+    height: 12px;
+    align-items: center;
+    cursor: pointer;
+}
+
 .shopping-cart-item img{
-    width: 110px;
-    margin-top: 10px;
-    height: 110px;
+    height: 80px;
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
 }
 
 .shopping-card-bought-details{
-    margin-top: 10px;
-    width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    font-size: 14px;
     padding-left: 8px;
     flex: 1;
     gap: 8px;
@@ -236,24 +249,19 @@ button {
 
 .shopping-cart-total{
     width: 100%;
-    height: 120px;
+    gap: 8px;
+    margin: 16px 0;
+    font-weight: bold;
+    font-size: 13px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-
 }
+
 .shopping-cart-total-actions{
     width: 100%;
-    height: 80px;
     display: flex;
-    flex-direction: column;
-
-}
-.shopping-cart-total-prices{
-    width: 100%;
-    height: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: space-between;
 }
 
 .page-content-header-action-item span{
@@ -267,8 +275,8 @@ button {
     font-size: 11px;
     padding: 2px;
     position: absolute;
-    top: 12px;
-    right: -12px;
+    top: 22px;
+    right: -4px;
 }
 
 .page-content-navigation{
@@ -304,6 +312,7 @@ button {
 .page-content-navigation-bar-items{
     margin-right:  16px;
     padding-bottom: 8px;
+    cursor: pointer;
 }
 
 .page-content-navigation-bar-items.selected{
@@ -366,7 +375,20 @@ button {
     font-weight: bold;
     color: #CD131C;
 }
-    
+
+.brand-logo-container{
+    padding: 0 16px;
+    height: 96px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #EBEBEB;
+}
+
+.brand-logo-container img{
+    width: 80px;
+    height: 80px;
+}
 
 
 .page-content-services {
@@ -493,6 +515,7 @@ button {
 }
 
 .shop-actions-container button{
+    cursor: pointer;
     margin-top: 16px;
 }
 
@@ -590,6 +613,7 @@ h1{
 }
 
 .price-discount span:last-of-type{
+    color: #C0C0C0;
     text-decoration: line-through;
 }
 
@@ -675,6 +699,7 @@ h1{
 }
 
 .subscribe-section-container{
+    font-weight: bold;
     width: 100%;
     padding: 0 16px;
     max-width: 1174px;
@@ -753,6 +778,10 @@ h1{
 
 .footer-navigation-navigation-contact .fa-phone{
     color: #404040;
+}
+
+.footer-navigation-group span{
+    cursor: pointer;
 }
 
 .footer-info {
